--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="img/logo.svg" alt="logo">
       </h1>
       <ul class="header-nav">
-        <li><a href="#concept">食品へのこだわり</a></li>
+        <li><a href="#concept">和牛へのこだわり</a></li>
         <li><a href="#room">空間へのこだわり</a></li>
         <li><a href="#baker">体験へのこだわり</a></li>
         <li><a href="info">予約・お問い合わせ</a></li>
